fix alignment and added hover

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,14 @@
 /*The styling creates rectanglar nav button thats green*/
 .left_button a{
     margin: 15px;
-    padding: 20px;
+    padding: 25px;
     background-color: #14342B;
     border-radius: 12%;
-    margin-left: 500px;
-    text-decoration: none;
+    text-decoration: underline;
+}
+.left_button:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
 }
 /*This create a grey background with items aligned side by side*/
 nav{
@@ -14,6 +17,12 @@ nav{
     display: flex;
     align-items: center;
 }
+
+.buttons {
+    margin-left: 400px;
+    display: flex;
+}
+
 /*this sets the width of the logo*/
 #logo{
     width: 400px;
@@ -29,22 +38,28 @@ a{
 }
 /*The styling creates rectanglar nav button thats green*/
 .right_button a{
-    padding: 20px;
+    padding: 25px;
     background-color: #14342B;
     border-radius: 12%;
     text-decoration: none;
-
 }
+
+.right_button:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
 /*this creates a bcakground for the footer with text aligned to the rigth*/
 footer{
     padding: 7px;
     background-color:#DEDEDE;
-    text-align: right;
+    text-align: center;
 }
 /*The imgs are in the center*/
 .main_imgs{
     display: flex;
     justify-content: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 /*The imgs have spacing inbetween*/
 }
 .food_imgs{
@@ -52,6 +67,9 @@ footer{
     margin: 10px;
     text-align: center;
 }
+
+
+
 /*the text box is centered with a dark green and white contrast for readability*/
 main{
 
@@ -63,4 +81,10 @@ main{
     background-color:#14342B ;
     width: 770px;
     margin: 50px 365px 50px 365px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius:20px ;
+}
+
+img {
+    border-radius: 20px;
 }
